Fixed multilingual issues with the emailer class

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -1,257 +1,5 @@
-0.7.3 - 18/01/08
+0.7.4 - 23/03/09
 -----------------------------
-Renlok
-- Fixed the sell page so you don’t receive a new auction email each time you edit an auction
-- Changed the time ending on the auction page so it looks much nicer
-- Changed the auction page removing some unneeded information
-- Fixed the about us page so it doesn’t parse out HTML tags
-- Fixed the admin news page when you go to delete a news item but click 'no' it takes you to the correct page
-- Added a note to the auction page showing if your still the current winner or if you’ve been outbid
-- Fixed edit auction so you can’t edit auctions after the auction has ended
-- Added some additional security to the edit auction page so if you shouldn't be able to edit the auction you can’t
-- Fixed error checking to send auction to a friend form so you cannot submit a blank message
-- Fixed the sell page so it buy it now is set to ‘no’ the buy it now price is set to 0 on the preview page
-- Fixed the sell page so buy it now only auctions cannot be submitted with buy it now price of 0
-- Fixed item page so the buy it now price displays for buy it now only auctions
-- Fixed the item page so on a buy it now only auction the starting price won’t be visible
-- Fixed the error message when you submit a blank form on email_request.php
-- Added email validation to email_request.php
-- Added some basic instructions to the thumbnail selection page
-- Fixed the upload gallery so it resizes images so they always fit on the page
-- Fixed problems in registration when the users account is automatically confirmed
-- Added auction title and link to leave feedback page
-- Added some extra text on the view feedback page so you know what you’re looking at
-- Added Total Due on buying.php
-- Change the converter link to only be on the currency rather than the amount as well
-- Fixed so min bid and reserve price are hidden on the sell preview page
-- Fixed profile page so percentages are displayed correctly
-- Fixed the auction page so the seller feedback value is correct
-- Fixed the home page so it displays correctly in IE when its blank
-- Changed the word filter so its now case insensitive
-- Fixed the no longer winner email
-- Removed the browse server buttons from the fck editor
-- Added some error check to the thumbnail generator so you don’t get black lines around the image
-- Fixed the relists so it displays the correct amount of relists on the open auctions page
-- Fixed the closed auction auction page so the sell under price check box only shows when its possible to do so
-- Removed some unneeded columns from the settings table
-- Made stats more accurate
-- Fixed the upload gallery so if you choose a default image but don’t make a thumbnail it will no longer messup your gallery
-- Fixed the admin so when a users account is activated they receive the activation email
-- Fixed buy now auctions so the auctions are displayed in the winners CP when user authentication is turned on
-- Added fck editor to the about us and terms pages in admin panel
-- Fixed the help box on the index page
-- Fixed issues with time zones
-- Added the 2 missing language strings Cancel and Save Thumbnail
-- Added error checking to image upload so its sure the image is uploaded
-- Fixed the gallery upload so it works with php safe mode turned on
-- Added SSL support
-- Added RSS feeds
-- Fixed the Statistical Resume page in the admin panel so when statistics are disabled the values will display as 0 instead of blank
-- Removed the obsolete bidfinder settings in the admin panel
-- Added buy it now only auto disable option
-- Added a hash to the user confirmation page to make it more secure
-- Fixed the sell page so if you start creating an auction and get to the preview screen but then decide to start again is no longer keeps the start date you entered on your last created auction
-- Fixed it so now when your viewing the site in a different language to the default setting and register it it sends the confirmation email in the correct language
-- Fixed language changer on admin page
-- Added feature to give bidders privacy on the items they bid
-- Added a box on profile page showing last recived feedback
-- Fixed Advance search so buy it now auctions are only shown if you can still actually buy it now
-- Built a Email class to handle the sending of emails
-- Added an alert on the user control panel telling the user user if they need to leave feedback
-- Added some basic file checks to the installer
-Jbilliau
-- Added option to enable/disable custom increments
-- Added text showing number of new messages on the user menu
-- Cleaned up the show feedback page
-- Cleaned up the action confirmation mail
-- Added functionality in admin panel so you can set feilds to be mandatory or hidden on the register page
+- Fixed the emailer so it sends the email in the users prefered language not the defult one
 
-0.7.2 - 07/12/08 - 17/01/08
------------------------------
-Renlok
-- Fixed the delete message functionality in PMs
-- Fixed contact seller
-- Added lightbox to auction pages
-- Fixed auction view counter to be unique views
-- Fixed time sync between sell start time and the header on the sell page
-- Fixed edit category
-- Fixed auction page so the decimal places are sorted out
-- Fixed the missing month on the auction page
-- Fixed forward after login when viewing auction page
-- Fixed reserved prices
-- Fixed custom increments
-- Made some tweaks so on the time it will show day instead of days when needed
-- Added buy it now only settings to admin panel
-- Added some javascript to the sell page so it must easier to use
-- Made some fixes to the auction page so the correct max bidder is always shown
-- Fixed error checking on the sell page
-- Fixed quantities on dutch auctions & buy it now only auctions
-- Fixed leave feedback page so it shows feedback to leave for items you won aswell as items you sold
-- Fixed the image purging functions in cron.php
-- Fixed the reply link when viewing a message
-- Fixed the install SQL removed some invalid characters
-- Changed the cron log so sql queries arnt displayed in it
-- Fixed the <!-- INCLUDE --> template function
-- Fixed contact seller when user is logged out
-- Added a check so blank messages cannot be sent on contact seller page
-- Added word filter to contact seller page
-- Fixed buy it now on the auction page
-- Fixed minimum bid when there has been no bids
-- Fixed the auction confirmation email to display the auction url
-- Fixed a problem with buy it now only auctions where some items are sold but not all and it enters an extra invalid entry to the winners table
-- Fixed feedback for when there are multiple winners
-- Fixed increments table
-- Added an updater to help with updating the scirpt
-- Fixed the word filter on auctions
-- Fixed some issues where the browse page times out when you have a massive category table
-- Fixed the banner pages in the admin panel
-- Fixed the advanced search when searching for postcode and country
-- Fixed search for when searching a specific category
-- Fixed image gallery to work correctly when editing/reopening/relisting an auction
-- Fixed a bug where an error about the reserve being to high was returned when the item was set to not have a reserve price
-
-0.7.1 - 07/12/08
------------------------------
-Renlok
-- Fixed profile page
-- Fixed feedback form
-- Fixed relist
-- Fixed logo page in admin panel so it shows correctly
-- Fixed custom styles
-- Fixed the pagenation on the search page
-- Redid the auction galleries
-- Fixed reopen closed auctions
-- Fixed some errors that occour when using PHP4
-- Cleaned up FCK editor
-- Fixed the cacheing on templates
-- Added message board controls to admin panel
-- Fixed send_email page and PMs
-- Fixed auction item page so it diplays bids correctly when your bid was automatically outbid
-- Fixed profile page when not logged in
-- Fixed maintenance mode
-- Fixed word filter
-- Fixed admin suspend auction page
-- Fixed admin management pages
-- Fixed admin feedback pages
-- Made a new logo
-
-0.7.0 - 17/11/08 -> 04/12/08
------------------------------
-Renlok
-- Fixed the import categories option in the installer
-- Added a login check to csseditor_.php
-- Fixed the admin add banenrs page
-_ Added $system->cleanvars() to clean up loads of vulnerabilities
-- Cleaned up alot of the code removing most of the php E_NOTICE warnings
-- Fixed the bug in admin/resendemail.php where it couldn't find the language file
-- Added a General PHP error handler
-- Added the missing send_email.inc.php file
-- Fixed the alignment issue
-- Fixed the unique visitor counter
-- Removed the error bar from the send_email page
-- Removed the categories_plain table and moved the data into the categories language file
-- Added the missing string $MSG['624 to the message file
-- Fixed the links when WeBid is installed in a sub folder
-- Sorted out registration so you recieve the correct message depending on the user confirmation method
-- Fixed the admin default country page
-- Added sell similar feature that can be used when an item has been sold
-- Added shipping fee to auctions
-- Cleaned up all the common code from the config file and put it in a class
-- Added a function so WeBid can find which languages are installed so you dont have to edit any files to add/remove languages
-- Fixed login page so it displays error messages correctly
-- Added decent template system which template caching
-
-0.6.3 - 06/11/08
------------------------------
-Renlok
-- Removed 11 files
-- Added option to not import default categories at installation if you want to make your own from scratch
-- Finished cleaning up the message.inc.php language file reduced from 114kb to 70kb (between v0.5 and now)
-- Updated mysql error checker to move you to the error page instead of just stopping the script
-- Fixed bug on admin deleteauction page
-- Fixed bug where you cant add an auction after editing one
-- Fixed admin listusers template
-- Fixed a category translation error on the index page
-- Fixed the time bar so it work with other languages
-- Fixed the statistics so it picks up the users browser
-- Improved functionality of the admin categories page
-- Added admin feature to set the account activation mode
-- Fixed a few bugs which occour when the categories are empty
-- Fixed admin membertypes page
-
-0.6.2 - 29/10/08
------------------------------
-Renlok
-- Fixed admin edit auction page
-- Fixed admin user authentication settings page
-- Fixed admin edit countries page
-- Fixed admin edit categories page
-- Removed some obsolete functions
-
-0.6.1 - 24/10/08 -> 26/10/08
------------------------------
-Renlok
-- Removed 2 files
-- Updated link on copyright message to webidsupport.com
-- Improved installer making it much simpler to use
-- Updated FCK editor from 2.0 to 2.6.3
-- Added error check on version checker
-
-0.6.0 - 24/09/08 -> 21/10/08
------------------------------
-Renlok
-- Removed 72 files
-- Fixed feedback SQL problems
-- Improved pagenation on feedback page
-- Fix Item Watch Page
-- Removed the https stuff as im not planing on added anything that will need it
-- Fixed the galleries in auctions
-- Fixed leave feadback pages
-- Completly recoded sell.php it now functions far better
-- Updated the installer so you enter the admin email on that
-- Started to cleanup and optimise the code
-- Updated SQL dump
-
-0.5.5 - 11/09/08 -> 17/09/08
------------------------------
-Renlok
-- Fixed all sucurity errors I found
-- Added .htaccess file
-- Deleted loads of uneeded files & code
-- Moved category translations from the database to the language folder
-- Fixed retrive password file
-- Fixed word filter
-- Fixed user feedback on auction page when feedback is 0
-
-0.5.4 - 30/08/08
------------------------------
-Renlok
-- Cleaned up select category page
-- Fixed create auction page
-- Cleaned up more of the language files
-- Cleaned up the config file
-- Fixed timeout errors with install file
-- Fixed SQL errors
-
-0.5.3 - 01/07/08
------------------------------
-Renlok
-- Cleaned a few of the template pages up
-- On contact user page it sends a copy of the message to thier message box aswell as sending an email
-- Edited the closed auction page so the ended time works correctly, also cleaned up the coding
-- Added a discription to Watch Action page
-- Fix the image display error in item_watch
-- Fix error with the cron
-- Make some changes to the feedback system to make it much neater
-- Fixed an item on view item when youve not logged in
-- Removed some useless files
-- Added an error log
-- Removed everything todo with aboutme pages as they dont exist yet
-- cleaned up the SQL
-- linked user address to location of item location
-- Add 'drop table if exists' queries to install file to help avoid bad installations
-- Added installation checks
-
-0.5.2 and older
------------------------------
-...who knows
+for older changes check out http://www.webidsupport.com/wiki/Change_Log
