--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -1,4 +1,4 @@
-0.7.4 - 23/03/09
+0.8.0 - 23/03/09
 -----------------------------
 - Fixed the emailer so it sends the email in the users prefered language not the defult one
 - Reorganised the admin homepage so it shows more useful information
@@ -10,5 +10,8 @@
 - Fixed the ip bans so it no longer loops infinatly when your banned
 - Fixed the counters in the header so it looks normal still when some of the counters are disabled
 - Fixed the users online counter so its more accurate
+- Fixed the proxy bidding so after making a proxy bid it displays the correct minimum bid
+- Fixed the stats by replacing $HTTP_COOKIE_VARS with $_COOKIE
+- Fixed the gallery when no thumbnail is made (#3)
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
