--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -12,14 +12,16 @@
 - Fixed the users online counter so its more accurate
 - Fixed the proxy bidding so after making a proxy bid it displays the correct minimum bid
 - Fixed the stats by replacing $HTTP_COOKIE_VARS with $_COOKIE
-- Fixed the gallery when no thumbnail is made (#3)
+- Fixed the gallery when no thumbnail is made (Bug #3)
 - Moved the admin theme files into thier own folder
 - Added the option for users to choose thier email format type
-- Fixed the bidding when a bid is made which is lower than the last proxy bid (#5)
-- Fixed the bidding when you make a bid when isnt 1 increment higher than the hishest proxy it no longer places the bid (#9)
+- Fixed the bidding when a bid is made which is lower than the last proxy bid (Bug #5)
+- Fixed the bidding when you make a bid when isnt 1 increment higher than the highest proxy it no longer places the bid (Bug #9)
 - Added resync counters option to admin CP
 - Removed updatedcounters.inc.php to dramatically speed up cron execution time
 - Added a standardised footer to all admin pages
 - Removed updatefaqs.inc.php as its unneeded
+- Fixed the bidding so the auctions reserve price is taken into account when making proxy bids
+- Added option to have privacy policy
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
