Quite a few updates include finished converting the category data structure

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -23,5 +23,8 @@
 - Removed updatefaqs.inc.php as its unneeded
 - Fixed the bidding so the auctions reserve price is taken into account when making proxy bids
 - Added option to have privacy policy
+- Added option to add copyright message
+- Updated jQuery to v1.3.2
+- Updated jQuery Image Area Select plugin to v0.8
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
