--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -28,5 +28,6 @@
 - Updated jQuery Image Area Select plugin to v0.8
 - Added a GD support check in the installer
 - Added a mass add option in the categories admin page make it quicker to add multiple categories
+- Added batch.php so running cronjobs will actually work
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
