Added a robot.txt file

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -38,5 +38,6 @@
 - Did a complete clean up of the cron.php file so it runs much faster
 - Fixed the cumulative emails
 - Fixed the edit page so you can no loner make auctions end in the past
+- Added a robot.txt file
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
