--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -42,5 +42,7 @@
 - Fixed gallery upload when the extionsions are in uppercase (Bug #18)
 - Fixed the bug where an error is displayed if you input a number with a comma decimal seperator
 - Fixed a bug in auctions_active.tpl where buy it now is not displayed
+- Added an option to enable or disable the template cache
+- Added an option to make the time remaining on on auction to become an automatic countdown timer after a given time
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
