--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -44,5 +44,6 @@
 - Fixed a bug in auctions_active.tpl where buy it now is not displayed
 - Added an option to enable or disable the template cache
 - Added an option to make the time remaining on on auction to become an automatic countdown timer after a given time
+- Fixed some minor bugs in the auction/ user control where the auction title/user name do not show when deleting/suspending user/auction
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
