--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -46,5 +46,7 @@
 - Added an option to make the time remaining on on auction to become an automatic countdown timer after a given time
 - Fixed some minor bugs in the auction/ user control where the auction title/user name do not show when deleting/suspending user/auction
 - Cleaned up the auction lists in the admin panel so they display more useful information
+- Added option to make auctions bold/highlighted or featured
+- Add option to start auction now
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
