--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -48,5 +48,6 @@
 - Cleaned up the auction lists in the admin panel so they display more useful information
 - Added option to make auctions bold/highlighted or featured
 - Add option to start auction now
+- Moved all the strings from mail.php into the language file
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
