Cleaned up user section in admin menu & More work to user groups

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -50,5 +50,6 @@
 - Add option to start auction now
 - Moved all the strings from mail.php into the language file
 - Fixed the admin newsletter sending page
+- Merged winner_address.php and contactseller.php
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
