--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -55,5 +55,7 @@
 - Fixed delete user page now after deleting a user who has made bids the auctions current bid & num bids will be correct afterwards
 - Fixed the reserved 'r' displays on auctions listings now while browsing the categories
 - Removed all referances to the never excisting 'adultonly' setting
+- Added ability to use array variables in the templates
+- Added user groups
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
