--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -65,5 +65,7 @@
 - Changed how relisting items works they are now relisted automatically and you dont have to go though the sell pages again
 - Added spam prevention methods
 - Fixed the buy it now auction email so it contains the correct info (Bug #30)
+- Fixed buying.php so the quantity is shown correctly if you use buy it now at different times for the same item
+- Fixed buying.php so the Your Bid and Total Due show the correct values when an item is bought with buy it now
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
