--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -68,5 +68,6 @@
 - Fixed buying.php so the quantity is shown correctly if you use buy it now at different times for the same item
 - Fixed buying.php so the Your Bid and Total Due show the correct values when an item is bought with buy it now
 - moved the images which contain words into the language folder so they can be translated
+- Fixed the buy it now only auctions so if a single user buys multiple items they wont be shown multiple times in the highest bidder list
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
