--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -72,5 +72,6 @@
 - Changed the regular search from an OR search to an AND search
 - Removed the r image from listing with a reserve price
 - Fixed the active auction page so for buy it only auctions the buy it now price is displayed instead of the current bid
+- Added a start date check so auction cannot be started in the past
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
