Started work adding Authorize.net gateway & fixed bug #49

--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -1,79 +1,6 @@
-0.8.0 - 23/03/09
+0.8.1 - 22/09/09
 -----------------------------
-- Fixed the emailer so it sends the email in the users prefered language not the defult one
-- Reorganised the admin homepage so it shows more useful information
-- Renamed config.inc.php and data.inc.php to common.inc.php and config.inc.php
-- Made the user login much more secure
-- Fixed the suspend/activate user admin page
-- Made some security fixes on the image upload page
-- Fixed the admin stats page so when you set to not tracking stats you dont have to have any stats selected
-- Fixed the ip bans so it no longer loops infinatly when your banned
-- Fixed the counters in the header so it looks normal still when some of the counters are disabled
-- Fixed the users online counter so its more accurate
-- Fixed the proxy bidding so after making a proxy bid it displays the correct minimum bid
-- Fixed the stats by replacing $HTTP_COOKIE_VARS with $_COOKIE
-- Fixed the gallery when no thumbnail is made (Bug #3)
-- Moved the admin theme files into thier own folder
-- Added the option for users to choose thier email format type
-- Fixed the bidding when a bid is made which is lower than the last proxy bid (Bug #5)
-- Fixed the proxy bidding (Bug #9)
-- Added resync counters option to admin CP
-- Removed updatedcounters.inc.php to dramatically speed up cron execution time
-- Added a standardised footer to all admin pages
-- Removed updatefaqs.inc.php as its unneeded
-- Fixed the bidding so the auctions reserve price is taken into account when making proxy bids
-- Added option to have privacy policy
-- Added option to add copyright message
-- Updated jQuery to v1.3.2
-- Updated jQuery Image Area Select plugin to v0.8
-- Added a GD support check in the installer
-- Added a mass add option in the categories admin page make it quicker to add multiple categories
-- Added batch.php so running cronjobs will actually work
-- Changed the confirmation page so it automatically logs the user in after activating their account
-- Added an automatic thumbnail selection to uplaoded images (selects as much the image as possible)
-- Added an orientation check on the thumbnail generator
-- Changed the thumb generator so the thumb caches are actually used
-- Fixed the category counters when you add a new auction
-- Fixed auction relist so all old bids are always removed when you relist an auction
-- Did a complete clean up of the cron.php file so it runs much faster
-- Fixed the cumulative emails
-- Fixed the edit page so you can no loner make auctions end in the past
-- Added a robot.txt file
-- Fixed gallery upload when the extionsions are in uppercase (Bug #18)
-- Fixed the bug where an error is displayed if you input a number with a comma decimal seperator
-- Fixed a bug in auctions_active.tpl where buy it now is not displayed
-- Added an option to enable or disable the template cache
-- Added an option to make the time remaining on on auction to become an automatic countdown timer after a given time
-- Fixed some minor bugs in the auction/user control where the auction title/user name do not show when deleting/suspending user/auction
-- Cleaned up the auction lists in the admin panel so they display more useful information
-- Added option to make auctions bold/highlighted or featured
-- Add option to start auction now
-- Moved all the strings from mail.php into the language file
-- Fixed the admin newsletter sending page
-- Merged winner_address.php and contactseller.php
-- Fixed exculdeuser.php so it displays the correct language string when activating a users account
-- Fixed delete user page now after deleting a user who has made bids the auctions current bid & num bids will be correct afterwards
-- Fixed the reserved 'r' displays on auctions listings now while browsing the categories
-- Removed all referances to the never excisting 'adultonly' setting
-- Added ability to use array variables in the templates
-- Added user groups
-- Added questions to the items page
-- Added a thread to PM so you can see your previous messages in a conversation
-- Added the option to disable proxy bidding
-- Updated the messages table so the colomn names are no longer conflicting with mysql commands
-- Reduced the size of the `no image available` image
-- Changed how relisting items works they are now relisted automatically and you dont have to go though the sell pages again
-- Added spam prevention methods
-- Fixed the buy it now auction email so it contains the correct info (Bug #30)
-- Fixed buying.php so the quantity is shown correctly if you use buy it now at different times for the same item
-- Fixed buying.php so the Your Bid and Total Due show the correct values when an item is bought with buy it now
-- moved the images which contain words into the language folder so they can be translated
-- Fixed the buy it now only auctions so if a single user buys multiple items they wont be shown multiple times in the highest bidder list
-- Changed the regular search from an OR search to an AND search
-- Removed the r image from listing with a reserve price
-- Fixed the active auction page so for buy it only auctions the buy it now price is displayed instead of the current bid
-- Added a start date check so auction cannot be started in the past
-- Added a check to check if the users choosen language actually exists
-- Fixed the admin delete auction page which would hang when you tried to delete an auction
+- Fixed the fee stettings page so it works when using a comma as a decimal (Bug #49)
+- Added an Authorize.net gateway option
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
