--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -9,5 +9,7 @@
 - Fixed when you do an update the Authorize.Net will actually show in the admin panel (Bug #57)
 - Fixed a bug where the fees class cannot be called (Bug #60)
 - Fixed the banner selection script from throwing an error when an ' is used in an items description (Bug #58)
+- Fixed the counter resync button so it calculates the number of bids correctly
+- Fixed the buyer questions on the item page so the questions are only shown if the question was set to public (Bug #62)
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
