--- a/WeBid/trunk/docs/changes.txt
+++ b/WeBid/trunk/docs/changes.txt
@@ -14,5 +14,6 @@
 - Fixed the pagnation in active_auctions.php (Bug #67)
 - Fixed the admin edit auction where it messes up the ending time
 - Fixed the regular search so it no longer thinks every auction is a featured auction
+- Fixed confirm user/register pages so users arnt counted twice
 
 for older changes check out http://www.webidsupport.com/wiki/Change_Log
